# Slicer-TITAN

./: CMakeLists.txt  README.md  usageInstructions.md
HypModuleCode/: CMakeLists.txt  HypModuleCode.py
HypModuleCode/Resources/UI/: HypModuleCode.ui  logo.qrc
HyperionModuleCode/: CMakeLists.txt  qSlicerHyperionModuleCodeModule.cxx  qSlicerHyperionModuleCodeModule.h  qSlicerHyperionModuleCodeModuleWidget.cxx  qSlicerHyperionModuleCodeModuleWidget.h
HyperionModuleCode/Logic/: vtkSlicerHyperionModuleCodeLogic.cxx  vtkSlicerHyperionModuleCodeLogic.h
HyperionModuleCode/Resources/: qSlicerHyperionModuleCodeModule.qrc
HyperionModuleCode/Resources/UI/: qSlicerHyperionModuleCodeFooBarWidget.ui  qSlicerHyperionModuleCodeModuleWidget.ui
HyperionModuleCode/Widgets/: qSlicerHyperionModuleCodeFooBarWidget.cxx  qSlicerHyperionModuleCodeFooBarWidget.h
Sample Data/BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_90_88_X11Y5_242_a0/: cd20.tiff  cd3.tiff  cd45.tiff  cd68.tiff  panck.tiff  vimentin.tiff
Sample Data/BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_90_88_X11Y5_242_a0_v2/: ER.tiff  PR.tiff  cd20.tiff  cd3.tiff  cd45.tiff  cd68.tiff  dna2.tiff  panck.tiff  vimentin.tiff
Sample Data/BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_92_239_X11Y3_165_a0/: ER.tiff  PR.tiff  cd20.tiff  cd3.tiff  cd45.tiff  cd68.tiff  dna2.tiff  panck.tiff  vimentin.tiff
Segmentation Validation Data/Breast Cancer Data/titan masks/: BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_102_72_X12Y1_18_a0_full Cell Mask_4.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_106_18_X13Y5_248_a0_full Cell Mask_4.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_107_114_X13Y4_219_a0_full Cell Mask_4.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_108_117_X13Y3_187_a0_full Cell Mask.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_109_83_X13Y2_116_a0_full Cell Mask.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_110_274_X13Y1_32_a0_full Cell Mask.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_114_42_X14Y5_250_a0_full Cell Mask.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_115_114_X14Y4_225_a0_full Cell Mask.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_116_117_X14Y3_195_a0_full Cell Mask.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_117_83_X14Y2_128_a0_full Cell Mask.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_118_274_X14Y1_46_a0_full Cell Mask.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_121_100_X15Y5_252_a0_full Cell Mask.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_122_166_X15Y4_231_a0_full Cell Mask.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_123_86_X15Y3_203_a0_full Cell Mask.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_124_31_X15Y2_140_a0_full Cell Mask.nrrd  BaselTMA_SP41_15.475kx12.665ky_10000x8500_5_20170905_125_58_X15Y1_60_a0_full Cell Mask.nrrd  (+729 more)
(+2780 files in other folders)
